配置: 增加conan配置

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,24 @@ add_definitions("-std=c++11 -Wall -lpthread -g")
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/third_party/include)
 
+# 根据不同的环境设置不同的库文件目录
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
+    if(APPLE)
+        set(LIB_DIR ${PROJECT_SOURCE_DIR}/third_party/lib/arm64-apple-darwin)
+    elseif(UNIX AND NOT APPLE)
+        set(LIB_DIR ${PROJECT_SOURCE_DIR}/third_party/lib/aarch64-linux-gnu)
+    endif()
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
+    if(APPLE)
+        set(LIB_DIR ${PROJECT_SOURCE_DIR}/third_party/lib/x86_64-apple-darwin)
+    elseif(UNIX AND NOT APPLE)
+        set(LIB_DIR ${PROJECT_SOURCE_DIR}/third_party/lib/x86_64-linux-gnu)
+    endif()
+endif()
+
 # 添加库文件目录
-link_directories(${PROJECT_SOURCE_DIR}/third_party/lib/arm64-apple-darwin/mosquitto)
-link_directories(${PROJECT_SOURCE_DIR}/third_party/lib/arm64-apple-darwin/spdlog)
+link_directories(${LIB_DIR}/mosquitto)
+link_directories(${LIB_DIR}/spdlog)
 link_libraries(mosquitto)
 link_libraries(mosquittopp)
 link_libraries(spdlog)
