改进: 优化配置细节

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
-
 project(TspService)
 
 # 设置C++标准
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-add_definitions("-std=c++11 -Wall -lpthread -g")
-
-# 添加头文件目录
-include_directories(${PROJECT_SOURCE_DIR}/include)
-include_directories(${PROJECT_SOURCE_DIR}/third_party/include)
+add_definitions("-Wall -lpthread -g")
 
 # 根据不同的环境设置不同的库文件目录
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
@@ -27,10 +25,8 @@ endif()
 
 # 添加库文件目录
 link_directories(${LIB_DIR}/mosquitto)
-link_directories(${LIB_DIR}/spdlog)
 link_libraries(mosquitto)
 link_libraries(mosquittopp)
-link_libraries(spdlog)
 
 # 添加可执行文件
 add_executable(TspService
@@ -40,3 +36,7 @@ add_executable(TspService
     src/tbox_mqtt_client.cpp
     src/tbox_mqtt_config.cpp
 )
+
+# 添加头文件目录
+target_include_directories(TspService PRIVATE ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(TspService PRIVATE ${PROJECT_SOURCE_DIR}/third_party/include)
